tests/test_typing/bad/err3.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [
    Structure { -- i: 3 -- e: Int content x };
    Structure { -- i: 4 -- e: y };
    Structure { -- i: 5 -- e: Dat content |1970-01-01| }
  ]
  definition a equals number of (z ++ z) / 2
```

```catala-test-inline
$ catala Typecheck
[RESULT] Typechecking successful!
```

A bug with delayed typechecking can make the above accept the error while it is
still triggered below.

```catala-test-inline
$ catala ocaml
[ERROR] Error during typechecking, incompatible types:
--> integer
--> decimal

Error coming from typechecking the following expression:
  --> tests/test_typing/bad/common.catala_en
   | 
15 |   output a content decimal
   |          ^
   + 

Type integer coming from expression:
  --> tests/test_typing/bad/err3.catala_en
   | 
10 |   definition a equals number of (z ++ z) / 2
   |                       ^^^^^^
   + 

Type decimal coming from expression:
  --> tests/test_typing/bad/common.catala_en
   | 
15 |   output a content decimal
   |                    ^^^^^^^
   + 
#return code 255#
```
